syntax = "proto3";

package sharesecret;

option go_package = "build;genproto";

service SecretApp {
  rpc CreateSecret (CreateSecretRequest) returns (CreateSecretResponse) {}
  rpc SeeSecret (SeeSecretRequest) returns (SeeSecretResponse) {}
}

message CreateSecretRequest {
  string content = 1;
  string password = 2; // Optional
}

message CreateSecretResponse {
  string id = 2;
}

message SeeSecretRequest {
  string id = 1;
  string password = 2;
}

message SeeSecretResponse {
  string content = 1;
}
